Add NY Times API

--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
   <link rel="stylesheet" href="css/main.css">
 
   <title>
-    Yelp search
+    News Article Search
   </title>
-
-
 </head>
 <body>
 
   <div class="container">
-    <h1 class="page-header">Yelp Search!</h1>
+    <h1 class="page-header">News Article Search</h1>
 
     <div class="well">
       <form id="search-form">
         <input type="search" name="searchTerm" id="searchTerm" />
-        <input type="search" name="locationTerm" id="locationTerm" />
         <button
           type="button"
           class="search">
