Ensure that data is received from the API

--- a/index.html
+++ b/index.html
@@ -30,20 +30,15 @@
 
     <div class="search-result panel panel-default">
       <ul>
-
+        <div class="panel-header">
+          <h4 class="lead_paragraph"></h4>
+        </div>
+        <div class="panel-body">
+          <p class="abstract"></p>
+          <p class="pub_date"></p>
+          <p class="web_url"></p>
+        </div>
       </ul>
-      <!--
-      <div class="panel-heading">
-        <h4 class="movie-title">Movie title</h4>
-      </div>
-      <div class="panel-body">
-        <p class="movie-year"></p>
-        <p class="movie-plot"></p>
-        <p class="movie-genre"></p>
-        <img src="#" alt="movie image">
-      </div>
-    -->
-
     </div>
   </div>
 
