--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <form id="search">
     <h1>Giphy Search!</h1>
     <input type="search" name="keyword" id="keyword"/>
-    <button type="button" class="search">Search</button>
+    <button type="submit" class="search">Search</button>
   </form>
   <div> </div>
 </body>
