user input working for both fields

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <form>
     <input type="text" id="city" placeholder="Type a city name">
-    <input type="text" id="return number" placeholder="How many images?">
+    <input type="text" id="return" placeholder="How many images?">
   </form>
   <div id="buttons">
     <div id="get">Images!</div>
